Update CI to accept downloading packages for Nimble

--- a/.github/workflows/nim.yml
+++ b/.github/workflows/nim.yml
@@ -20,4 +20,4 @@ jobs:
         uses: jiro4989/setup-nim-action@v1
         with:
           nim-version: ${{ matrix.nim }}
-      - run: nimble test
+      - run: nimble test -y
