--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   nim-version: stable
-  nim-src: src/stb_rect_pack.nim
+  nim-src: src/stb_truetype.nim
   deploy-dir: .gh-pages
 
 jobs:
