--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           nim-version: ${{ env.nim-version }}
       - run: |
+          sudo apt-get update
+          sudo apt-get install -y lcov build-essential
           nimble install coco nimPNG -y
           coco --target "tests/**/*.nim" --cov 'src/**/*.nim' --cov '!tests' --compiler="--opt:speed -d:debug --verbosity:0 --hints:off --lineDir:on"
       - name: Upload Coverage Reports
