Combine coco --cov CLI options with commas

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,7 +28,7 @@ jobs:
         run: nimble install coco nimPNG -y
 
       - name: "Generate Coverage"
-        run: coco --target "tests/**/*.nim" --cov 'src/**/*.nim' --cov '!tests' --cov '!nimcache' --compiler="--opt:speed -d:debug --verbosity:0 --hints:off --lineDir:on"
+        run: coco --target "tests/**/*.nim" --cov '!tests,!nimcache,!**/test_stb_truetype.nim' --compiler="--opt:speed -d:debug --verbosity:0 --hints:off --lineDir:on"
 
       - uses: codecov/codecov-action@v2
         with:
